--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -147,10 +147,13 @@
     <p>Made with ❤️ by Mayank</p>
     <ul>
       <li><a href="https://www.instagram.com/_mayday_mayank_?igsh=djF1d3J5dWd0b3ow&utm_source=qr" target="_blank"><i class="fab fa-instagram"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/mayank-behera-5249771b4?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+      <li><a href="https://github.com/LuminousMayank" target="_blank"><i class="fab fa-github"></i></a></li>
     </ul>
   </footer>
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
